Make mandatory argument of -NoValue- remain -NoValue- (fixes #349)
Previously that became an empty argument (if the command had any
default arguments) because the machinery for default arguments replaces
-NoValue- by the corresponding default indiscriminately.  I simply put
a default value of -NoValue- for mandatory arguments.

As a side-effect, I've optimized the code so that a function such that
all default values are -NoValue- does not use the machinery at all.

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -844,9 +844,8 @@
 %
 % \begin{variable}{\l_@@_defaults_bool, \l_@@_defaults_tl}
 %   The boolean indicates whether there are any argument with default
-%   value; the token list holds the code to determine these default
-%   values in terms of other arguments, and dummy code for arguments
-%   that do not need a default.
+%   value other than |-NoValue-|; the token list holds the code to
+%   determine these default values in terms of other arguments.
 %    \begin{macrocode}
 \bool_new:N \l_@@_defaults_bool
 \tl_new:N \l_@@_defaults_tl
@@ -1380,7 +1379,7 @@
         \@@_if_no_value:nTF {#2}
           {
             \tl_put_right:Nx \l_@@_tmpa_tl
-              { { \exp_not:N \exp_not:n { \exp_not:o { \use_none:n #3 } } } }
+              { { \exp_not:N \exp_not:n { \exp_not:o {#3} } } }
           }
           {
             \tl_put_right:Nn \l_@@_tmpa_tl
@@ -1500,7 +1499,7 @@
       }
       {
         \@@_if_no_value:nTF {#2}
-          { \exp_args:No \@@_end_expandable_defaults:nw { \use_none:n #1 } }
+          { \exp_args:No \@@_end_expandable_defaults:nw {#1} }
           { \@@_end_expandable_defaults:nw {#2} }
       }
   }
@@ -2262,40 +2261,40 @@
 % \begin{macro}{\@@_add_default:n, \@@_add_default:, \@@_add_default_E:nn}
 % \begin{macro}[aux]{\@@_add_default_E_aux:n}
 %   Store the default value of an argument, or rather code that gives
-%   that default value (it may involve other arguments).  Defaults are
-%   always stored with a leading |.| except for \texttt{E}-type
-%   arguments, to distinguish them.  For \texttt{E}-type arguments, pad
-%   the defaults |#2| with some |{-NoValue-}| until there are the same
-%   numbers as embellishments~|#1|.  Then for technical reasons make
-%   sure the first default is wrapped in braces.  These functions are
-%   also used when defining expandable commands.
+%   that default value (it may involve other arguments).  This is
+%   \cs{c_@@_no_value_tl} for arguments with no actual default or with
+%   default |-NoValue-|; \cs{prg_do_nothing:} followed by a default
+%   value for most others, and a token list of braced arguments for
+%   \texttt{E}-type arguments.  For \texttt{E}-type arguments, pad the
+%   defaults |#2| with some |{-NoValue-}| until there are as many as
+%   embellishments~|#1|.  These functions are also used when defining
+%   expandable commands.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_add_default:n #1
   {
-    \bool_set_true:N \l_@@_defaults_bool
-    \tl_put_right:Nn \l_@@_defaults_tl { { . #1} }
+    \@@_if_no_value:nTF {#1}
+      { \@@_add_default: }
+      {
+        \bool_set_true:N \l_@@_defaults_bool
+        \tl_put_right:Nn \l_@@_defaults_tl { { \prg_do_nothing: #1 } }
+      }
   }
 \cs_new_protected:Npn \@@_add_default:
-  { \tl_put_right:Nn \l_@@_defaults_tl { . } }
+  { \tl_put_right:Nn \l_@@_defaults_tl { \c_@@_no_value_tl } }
 \cs_new_protected:Npn \@@_add_default_E:nn #1#2
   {
     \bool_set_true:N \l_@@_defaults_bool
-    \tl_set:Nx \l_@@_tmpa_tl
-      {
-        \exp_not:n {#2}
-        \prg_replicate:nn
-          { \tl_count:n {#1} - \tl_count:n {#2} }
-          { { \c_@@_no_value_tl } }
-      }
     \tl_put_right:Nx \l_@@_defaults_tl
       {
         {
-          \exp_not:f
-            { \exp_after:wN \@@_add_default_E_aux:n \l_@@_tmpa_tl }
+          \tl_map_function:nN {#2} \@@_add_default_E_aux:n
+          \prg_replicate:nn
+            { \tl_count:n {#1} - \tl_count:n {#2} }
+            { { \c_@@_no_value_tl } }
         }
       }
   }
-\cs_new:Npn \@@_add_default_E_aux:n #1 { {#1} }
+\cs_new:Npn \@@_add_default_E_aux:n #1 { \exp_not:n { {#1} } }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
