Removal of $Id: Move data from \GetIdInfo

--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -36,8 +36,10 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\GetIdInfo$Id: l3regex.dtx 6988 2017-03-11 15:52:21Z joseph $
-  {L3 Experimental regular expressions}
+\def\ExplFileName{l3regex}
+\def\ExplFileDescription{L3 Experimental regular expressions}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
