--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -37,8 +37,10 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\GetIdInfo$Id: l3galley.dtx 6988 2017-03-11 15:52:21Z joseph $
-  {L3 Experimental galley code}
+\def\ExplFileName{l3galley}
+\def\ExplFileDescription{L3 Experimental galley code}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
