--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3basics.dtx 6929 2017-02-14 15:53:00Z bruno $
-  {L3 Basic definitions}
+\def\ExplFileName{l3basics}
+\def\ExplFileDescription{L3 Basic definitions}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
