--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3drivers.dtx 6954 2017-02-18 20:26:11Z joseph $
-  {L3 Experimental drivers}
+\def\ExplFileName{l3drivers}
+\def\ExplFileDescription{L3 Experimental drivers}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
