--- a/l3kernel/l3fp.dtx
+++ b/l3kernel/l3fp.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3fp.dtx 6989 2017-03-12 05:08:10Z bruno $
-  {L3 Floating points}
+\def\ExplFileName{l3fp}
+\def\ExplFileDescription{L3 Floating points}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \usepackage{amsmath}
