--- a/l3kernel/l3token.dtx
+++ b/l3kernel/l3token.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3token.dtx Copyright (C) 2005-2016 The LaTeX3 Project
+%% File: l3token.dtx Copyright (C) 2005-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3token.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Experimental token manipulation}
+\def\ExplFileName{l3token}
+\def\ExplFileDescription{L3 Experimental token manipulation}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
