--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -22,8 +22,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3fp-functions.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental floating point functions}
+\def\ExplFileName{l3fp-functions}
+\def\ExplFileDescription{L3 Experimental floating point functions}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
