--- a/l3trial/l3fp-extras/l3fp-interchange.dtx
+++ b/l3trial/l3fp-extras/l3fp-interchange.dtx
@@ -22,8 +22,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3fp-interchange.dtx 6914 2017-02-13 21:48:16Z joseph $
-  {L3 Experimental floating point interchange}
+\def\ExplFileName{l3fp-interchange}
+\def\ExplFileDescription{L3 Experimental floating point interchange}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
