--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -22,8 +22,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3fp-symbolic.dtx 6927 2017-02-14 12:18:32Z bruno $
-  {L3 Experimental symbolic expressions}
+\def\ExplFileName{l3fp-symbolic}
+\def\ExplFileDescription{L3 Experimental symbolic expressions}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
