--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3htoks.dtx Copyright (C) 2013-2016 The LaTeX3 Project
+%% File l3htoks.dtx Copyright (C) 2013-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3htoks.dtx 6839 2017-02-06 18:52:08Z bruno $
-  {L3 Experimental conversion of tokens to text}
+\def\ExplFileName{htoks}
+\def\ExplFileDescription{L3 Experimental conversion of tokens to text}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
