--- a/l3trial/l3ldb/l3ldbparse.dtx
+++ b/l3trial/l3ldb/l3ldbparse.dtx
@@ -36,8 +36,10 @@
 %%
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3ldbparse.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental Resource Database Parsing}
+\def\ExplFileName{l3ldbparse}
+\def\ExplFileDescription{L3 Experimental resource database parsing}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
