--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -35,8 +35,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3str-format-new.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental Formatting as Strings}
+\def\ExplFileName{l3str-format-new}
+\def\ExplFileDescription{L3 Experimental formatting as strings}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
