--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3font.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental Font Loading}
+\def\ExplFileName{l3font}
+\def\ExplFileDescription{L3 Experimental font loading}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
