--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str-format.dtx Copyright (C) 2012-2013,2015,2016 The LaTeX3 Project
+%% File: l3str-format.dtx Copyright (C) 2012-2013,2015-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -22,8 +22,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3str-format.dtx 6948 2017-02-18 14:50:25Z bruno $
-  {L3 Experimental string formatting}
+\def\ExplFileName{l3str-format}
+\def\ExplFileDescription{L3 Experimental string formatting}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
