--- a/l3experimental/l3str/l3tl-build.dtx
+++ b/l3experimental/l3str/l3tl-build.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3tl-build.dtx Copyright (C) 2011-2016 The LaTeX3 Project
+%% File: l3tl-build.dtx Copyright (C) 2011-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,8 +36,10 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\GetIdInfo$Id: l3tl-build.dtx 6988 2017-03-11 15:52:21Z joseph $
-  {L3 Experimental token list construction}
+\def\ExplFileName{l3tl-build}
+\def\ExplFileDescription{L3 Experimental token list construction}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
