--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -26,8 +26,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3clist.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Comma separated lists}
+\def\ExplFileName{l3clist}
+\def\ExplFileDescription{L3 Comma separated lists}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
