--- a/l3kernel/l3color.dtx
+++ b/l3kernel/l3color.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3color.dtx Copyright(C) 2011,2012,2014,2016 The LaTeX3 Project
+%% File: l3color.dtx Copyright(C) 2011,2012,2014,2016,2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3color.dtx 6805 2016-12-28 22:15:52Z joseph $
-  {L3 Experimental color support}
+\def\ExplFileName{l3color}
+\def\ExplFileDescription{L3 Experimental color support}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
