--- a/l3kernel/l3deprecation.dtx
+++ b/l3kernel/l3deprecation.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3deprecation.dtx 6989 2017-03-12 05:08:10Z bruno $
-  {L3 Deprecation errors}
+\def\ExplFileName{l3deprecation}
+\def\ExplFileDescription{L3 Deprecation errors}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
