--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3doc.dtx Copyright (C) 1990-2016 The LaTeX3 project
+%% File: l3doc.dtx Copyright (C) 1990-2017 The LaTeX3 project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -62,8 +62,10 @@ Do not distribute a modified version of this file.
 %
 %<*driver|class>
 \RequirePackage{expl3,xparse,calc}
-\GetIdInfo$Id: l3doc.dtx 6943 2017-02-17 16:47:59Z bruno $
-          {L3 Experimental documentation class}
+\def\ExplFileName{l3doc}
+\def\ExplFileDescription{L3 Experimental documentation class}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|class>
 %
 %<*driver>
