--- a/l3kernel/l3final.dtx
+++ b/l3kernel/l3final.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3final.dtx Copyright (C) 1990-2016 The LaTeX3 Project
+%% File: l3final.dtx Copyright (C) 1990-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -22,8 +22,10 @@
 %
 %<*driver>
 \documentclass[full]{l3doc}
-\GetIdInfo$Id: l3final.dtx 6805 2016-12-28 22:15:52Z joseph $
-  {L3 Experimental format finalisation}
+\def\ExplFileName{l3final}
+\def\ExplFileDescription{L3 Experimental format finalisation}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
