--- a/l3kernel/l3fp-round.dtx
+++ b/l3kernel/l3fp-round.dtx
@@ -22,8 +22,10 @@
 %
 %<*driver>
 \documentclass[full]{l3doc}
-\GetIdInfo$Id: l3fp-round.dtx 6989 2017-03-12 05:08:10Z bruno $
-  {L3 Floating-point rounding}
+\def\ExplFileName{l3fp-round}
+\def\ExplFileDescription{L3 Floating point rounding}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
