--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3names.dtx 6962 2017-02-19 22:58:35Z joseph $
-  {L3 Namespace for primitives}
+\def\ExplFileName{l3names}
+\def\ExplFileDescription{L3 Namespace for primitives}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
