--- a/l3kernel/l3prg.dtx
+++ b/l3kernel/l3prg.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3prg.dtx 6906 2017-02-12 20:07:58Z bruno $
-  {L3 Control structures}
+\def\ExplFileName{l3prg}
+\def\ExplFileDescription{L3 Control structures}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
