--- a/l3kernel/l3quark.dtx
+++ b/l3kernel/l3quark.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3quark.dtx Copyright (C) 1990-2016 The LaTeX3 Project
+%% File: l3quark.dtx Copyright (C) 1990-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3quark.dtx 6947 2017-02-17 21:27:18Z bruno $
-  {L3 Quarks}
+\def\ExplFileName{l3quark}
+\def\ExplFileDescription{L3 Quarks}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
