--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -25,8 +25,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3skip.dtx 6968 2017-02-20 16:08:44Z bruno $
-  {L3 Dimensions and skips}
+\def\ExplFileName{l3skip}
+\def\ExplFileDescription{L3 Dimensions and skips}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
