--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3str.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Strings}
+\def\ExplFileName{l3str}
+\def\ExplFileDescription{L3 Strings}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
