--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -24,8 +24,10 @@
 \documentclass[full]{l3doc}
 %</driver>
 %<*driver|package>
-\GetIdInfo$Id: l3tl.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Token lists}
+\def\ExplFileName{l3tl}
+\def\ExplFileDescription{L3 Token lists}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \begin{document}
