--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -61,8 +61,10 @@ Do not distribute a modified version of this file.
 %</driver>
 %<*driver|pkg>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3auxdata.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental auxiliary data}
+\def\ExplFileName{l3auxdata}
+\def\ExplFileDescription{L3 Experimental auxiliary data}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|pkg>
 %<*driver>
 \input{\jobname.drv}
