--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3benchmark.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental benchmark}
+\def\ExplFileName{l3benchmark}
+\def\ExplFileDescription{L3 Experimental benchmarking}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
