--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3bigint.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Experimental support for unbounded integers}
+\def\ExplFileName{l3bigint}
+\def\ExplFileDescription{L3 Experimental unbounded integer support}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
