--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3check.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Checking and debugging LaTeX3 code}
+\def\ExplFileName{l3check}
+\def\ExplFileDescription{L3 Experimental checking and debugging}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
