--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3hooks.dtx Copyright (C) 2011,2012,2014,2016 The LaTeX3 Project
+%% File l3hooks.dtx Copyright (C) 2011,2012,2014,2016,2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3hooks.dtx 6593 2016-06-13 13:27:32Z joseph $
-  {L3 Experimental hooks}
+\def\ExplFileName{l3hooks}
+\def\ExplFileDescription{L3 Experimental hooks}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
