--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3kernel-extras.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental additions to l3kernel}
+\def\ExplFileName{l3kernel-extras}
+\def\ExplFileDescription{L3 Experimental additions to l3kernel}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
