--- a/l3trial/l3ldb/l3precom.dtx
+++ b/l3trial/l3ldb/l3precom.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3precom.dtx Copyright (C) 2012,2015,2016 The LaTeX3 Project
+%% File: l3precom.dtx Copyright (C) 2012,2015-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -35,8 +35,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3precom.dtx 6592 2016-06-13 12:42:21Z joseph $
-  {L3 Experimental Precompilation of Functions}
+\def\ExplFileName{l3precom}
+\def\ExplFileDescription{L3 Experimental precompilation of functions}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
