--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3trace.dtx (C) Copyright 2012,2016 The LaTeX3 Project
+%% File l3trace.dtx (C) Copyright 2012,2016,2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3trace.dtx 6967 2017-02-20 14:51:30Z bruno $
-  {L3 Experimental tracing of higher-level modules}
+\def\ExplFileName{l3trace}
+\def\ExplFileDescription{L3 Experimental tracing of higher-level modules}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
