--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: l3tree.dtx 6963 2017-02-20 02:29:02Z bruno $
-  {L3 Experimental tree manipulations}
+\def\ExplFileName{l3tree}
+\def\ExplFileDescription{L3 Experimental tree manipulations}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
