--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: xbox.dtx Copyright(C) 2012,2016 The LaTeX3 Project
+%% File: xbox.dtx Copyright(C) 2012,2016,2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,8 +36,10 @@
 %
 %<*driver|package>
 \RequirePackage{expl3,xparse}
-\GetIdInfo$Id: xbox.dtx 6642 2016-06-23 11:04:49Z joseph $
-  {L3 Experimental document level boxes}
+\def\ExplFileName{xbox}
+\def\ExplFileDescription{L3 Experimental document level boxes}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
