Get that last commit right ...

--- a/l3leftovers/cs-input.dtx
+++ b/l3leftovers/cs-input.dtx
@@ -35,7 +35,7 @@
 %
 %<*driver|package>
 \RequirePackage{expl3,l3str}
-\GetIdInfo$Id: cs-input.dtx 6041 2015-09-23 15:17:01Z joseph $
+\GetIdInfo$Id$
   {L3 Experimental input of any list of tokens}
 %</driver|package>
 %<*driver>
