--- a/xpackages/xfrontm/xfm-test-cls.dtx
+++ b/xpackages/xfrontm/xfm-test-cls.dtx
@@ -34,7 +34,7 @@
 %% -----------------------------------------------------------------------
 %%
 \RequirePackage{expl3}
-\GetIdInfo$Id: xfm-test-cls.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
        {sample frontmatter layout class}
 %<aip>\ProvidesExplClass{xfm-aip}{\filedate}{\fileversion}{\filedescription}
 %<arlo>\ProvidesExplClass{xfm-arlo}{\filedate}{\fileversion}{\filedescription}
