--- a/xpackages/xhead/xhead.dtx
+++ b/xpackages/xhead/xhead.dtx
@@ -34,7 +34,7 @@
 %%
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: xhead.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
           {Templates heading commands}
 %</driver|package>
 %<*driver>
@@ -237,7 +237,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\GetIdInfo$Id: xhead.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
   {heading module}
 \ProvidesExplPackage
   {\filename}{\filedate}{\fileversion}{\filedescription}
