--- a/xpackages/xlists/xlists.dtx
+++ b/xpackages/xlists/xlists.dtx
@@ -40,7 +40,7 @@
 \RequirePackage{expl3}
 %</driver|package>
 %\fi
-\GetIdInfo$Id: xlists.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
   {Generic lists}
 %\iffalse
 %<*driver>
