--- a/xpackages/xor/xmarks.dtx
+++ b/xpackages/xor/xmarks.dtx
@@ -37,7 +37,7 @@
 %
 %<*driver|package>
 \RequirePackage{xparse}
-\GetIdInfo$Id: xmarks.dtx 5983 2015-09-10 18:57:56Z joseph $
+\GetIdInfo$Id$
   {L3 experimental marks (part of xor)}
 %</driver|package>
 %<*driver>
