--- a/xpackages/xor/xoutput.tex
+++ b/xpackages/xor/xoutput.tex
@@ -37,7 +37,7 @@
 % \fi
 %
 \RequirePackage{expl3}
-\GetIdInfo$Id: xoutput.tex 5983 2015-09-10 18:57:56Z joseph $
+\GetIdInfo$Id$
 {xor documentation driver}
 
 
