--- a/l3leftovers/l3precom.dtx
+++ b/l3leftovers/l3precom.dtx
@@ -36,7 +36,7 @@
 \RequirePackage{l3bootstrap}
 %</driver|package>
 %\fi
-\GetIdInfo$Id: l3precom.dtx 3991 2012-07-16 19:00:35Z joseph $
+\GetIdInfo$Id$
   {L3 Experimental precompilation module}
 %\iffalse
 %<*driver>
