--- a/l3leftovers/tl-act.dtx
+++ b/l3leftovers/tl-act.dtx
@@ -35,7 +35,7 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\GetIdInfo$Id: tl-act.dtx 5893 2015-08-26 16:16:52Z mittelba $
+\GetIdInfo$Id$
   {L3 Experimental Actions on Token Lists}
 %</driver|package>
 %<*driver>
