--- a/xpackages/xcontents/xcontents.dtx
+++ b/xpackages/xcontents/xcontents.dtx
@@ -37,7 +37,7 @@
 \RequirePackage{expl3}
 %</driver|package|signature>
 %\fi
-\GetIdInfo$Id: xcontents.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
           {xcontents}
 %\iffalse
 %<*signature>
