--- a/xpackages/xlang/xlang.dtx
+++ b/xpackages/xlang/xlang.dtx
@@ -34,7 +34,7 @@
 %% -----------------------------------------------------------------------
 %%
 \RequirePackage{expl3}
-\GetIdInfo$Id: xlang.dtx 4482 2013-04-24 21:05:12Z joseph $
+\GetIdInfo$Id$
           {Experimental language package}
 %<package>\ProvidesExplPackage
 %<package>  {\filename}{\filedate}{\fileversion}{\filedescription}
