--- a/xpackages/xlists/xmaterial.dtx
+++ b/xpackages/xlists/xmaterial.dtx
@@ -43,7 +43,7 @@
 \RequirePackage{expl3}
 %</driver|package>
 %\fi
-\GetIdInfo$Id: xmaterial.dtx 4712 2014-04-30 08:17:49Z joseph $
+\GetIdInfo$Id$
   {v- and h-material (FMi)}
 %\iffalse
 %<*driver>
