--- a/xpackages/xor/xo-footnote.dtx
+++ b/xpackages/xor/xo-footnote.dtx
@@ -35,7 +35,7 @@
 %% -----------------------------------------------------------------------
 %%
 \RequirePackage{expl3}
-\GetIdInfo $Id: xo-footnote.dtx 5983 2015-09-10 18:57:56Z joseph $
+\GetIdInfo $Id$
           {xo-footnote}
 \ProvidesExplPackage{\ExplFileName}
   {\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
