--- a/xpackages/xor/xo-new.dtx
+++ b/xpackages/xor/xo-new.dtx
@@ -37,7 +37,7 @@
 %% -----------------------------------------------------------------------
 %%
 \RequirePackage{expl3}
-\GetIdInfo $Id: xo-new.dtx 5983 2015-09-10 18:57:56Z joseph $
+\GetIdInfo $Id$
           {xo-new (part of xor)}
 \ProvidesExplPackage{\ExplFileName}
   {\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
