--- a/xpackages/xor/xo-pfloat.tex
+++ b/xpackages/xor/xo-pfloat.tex
@@ -7,7 +7,7 @@
 %
 
 \RequirePackage{expl3}
-\GetIdInfo$Id: xo-pfloat.tex 5983 2015-09-10 18:57:56Z joseph ${xor
+\GetIdInfo$Id${xor
   documentation}
 \ProvidesFile{\ExplFileName.\ExplFileExtension}
   [\ExplFileDate\space v\ExplFileVersion\space\ExplFileDescription]
