--- a/xpackages/xor/xoutput.dtx
+++ b/xpackages/xor/xoutput.dtx
@@ -35,7 +35,7 @@
 %% -----------------------------------------------------------------------
 %%
 \RequirePackage{expl3}
-\GetIdInfo $Id: xoutput.dtx 4712 2014-04-30 08:17:49Z joseph $
+\GetIdInfo $Id$
           {xoutput}
 \ProvidesExplPackage{\ExplFileName}
   {\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
