--- a/l3kernel/l3styleguide.tex
+++ b/l3kernel/l3styleguide.tex
@@ -1,6 +1,6 @@
 \iffalse meta-comment
 
-File l3styleguide.tex Copyright (C) 2011,2012,2015,2016 The LaTeX3 Project
+File l3styleguide.tex Copyright (C) 2011,2012,2015-2017 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -17,17 +17,16 @@ The released version of this bundle is available from CTAN.
 \fi
 
 \documentclass{l3doc}
-\usepackage{svn-multi}
 
-\svnid{$Id: l3styleguide.tex 2772 2011-09-07 15:07:41Z joseph $}
-\def\filedate{\svnfileyear/\svnfilemonth/\svnfileday}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 
 \title{%
   The \LaTeX3 kernel: style guide for code authors%
     \thanks
       {%
-        This file describes v\svnfilerev,
-        last revised \filedate.
+        This file describes v\ExplFileVersion,
+        last revised \ExplFileDate.
       }%
 }
 \author{%
