--- a/l3kernel/l3syntax-changes.tex
+++ b/l3kernel/l3syntax-changes.tex
@@ -1,6 +1,6 @@
 \iffalse meta-comment
 
-File l3syntax-changes.tex Copyright (C) 2011-2012 The LaTeX3 Project
+File l3syntax-changes.tex Copyright (C) 2011-2012,2017 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -18,17 +18,15 @@ The released version of this bundle is available from CTAN.
 
 \documentclass{l3doc}
 
-\usepackage{svn-multi}
-
-\svnid{$Id: l3syntax-changes.tex 4048 2012-08-02 09:49:10Z joseph $}
-\def\filedate{\svnfileyear/\svnfilemonth/\svnfileday}
+\def\ExplFileDate{2017/03/11}
+\def\ExplFileVersion{6988}
 
 \title{%
   Syntax changes in \LaTeX3 functions
     \thanks
       {%
-        This file describes v\svnfilerev,
-        last revised \filedate.
+        This file describes v\ExplFileVersion,
+        last revised \ExplFileDate.
       }%
 }
 \author{%
