Move 'fixed' package data to \ProvidesExpl... lines
This removes defintions of \ExplFileName and \ExplFileDescription
other than by \GetIdInfo.  The logic here is that whilst with
\GetIdInfo they are dynamic values, once you drop that you are
using a one-off defintion which simply makes the set up more complex.

There is a small amount of repetition as a result in expl3.dtx but
hopefully that is acceptable.

--- a/l3experimental/l3str/l3regex.dtx
+++ b/l3experimental/l3str/l3regex.dtx
@@ -36,8 +36,6 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileName{l3regex}
-\def\ExplFileDescription{L3 Experimental regular expressions}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -740,8 +738,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3regex}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental regular expressions}
 \RequirePackage{l3tl-build, l3tl-analysis, l3str-convert}
 %</package>
 %    \end{macrocode}
