--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -22,8 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3str-format}
-\def\ExplFileDescription{L3 Experimental string formatting}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -169,8 +167,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3str-format}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental string formatting}
 \RequirePackage{l3str}
 %</package>
 %    \end{macrocode}
