--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -22,8 +22,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3tl-analysis}
-\def\ExplFileDescription{L3 Experimental token list analysis}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -177,8 +175,8 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3tl-analysis}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental token list analysis}
 %    \end{macrocode}
 %
 % \subsection{Variables and helper functions}
