--- a/l3experimental/l3str/l3tl-build.dtx
+++ b/l3experimental/l3str/l3tl-build.dtx
@@ -36,8 +36,6 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileName{l3tl-build}
-\def\ExplFileDescription{L3 Experimental token list construction}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -156,8 +154,8 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3tl-build}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental token list construction}
 %    \end{macrocode}
 %
 % \subsection{Variables and helper functions}
