--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -23,8 +23,6 @@
 %
 %<*driver|package>
 \RequirePackage{xparse}
-\def\ExplFileName{xgalley}
-\def\ExplFileDescription{L3 Experimental galley}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -738,8 +736,8 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{xgalley}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental galley}
 \RequirePackage{xparse,xtemplate,l3galley}
 %    \end{macrocode}
 %
