--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -21,8 +21,6 @@
 % for those people who are interested.
 %
 %<*driver|generic|package>
-\def\ExplFileName{expl3}%
-\def\ExplFileDescription{L3 programming layer}%
 \def\ExplFileDate{2017/03/11}%
 \def\ExplFileVersion{6988}%
 %</driver|generic|package>
@@ -1133,11 +1131,11 @@
 %    \begin{macrocode}
 %<*!loader>
 \begingroup\expandafter\expandafter\expandafter\endgroup
-\expandafter\ifx\csname ver@\ExplFileName -code.tex\endcsname\relax
-  \expandafter\edef\csname ver@\ExplFileName -code.tex\endcsname
+\expandafter\ifx\csname ver@expl3-code.tex\endcsname\relax
+  \expandafter\edef\csname ver@expl3-code.tex\endcsname
     {%
       \ExplFileDate\space v\ExplFileVersion\space
-      \ExplFileDescription\space
+      L3 programming layer
     }%
 \else
   \expandafter\endinput
@@ -1153,10 +1151,9 @@
 %<*!loader>
 \immediate\write-1 %
   {%
-    Package:
-      \ExplFileName\space
-      \ExplFileDate\space v\ExplFileVersion\space \ExplFileDescription\space
-      (code)%
+    Package: expl3
+      \ExplFileDate\space v\ExplFileVersion\space
+      L3 programming layer (code)%
   }%
 %</!loader>
 %    \end{macrocode}
@@ -1169,10 +1166,10 @@
 %
 % Identify the package.
 %    \begin{macrocode}
-\ProvidesPackage{\ExplFileName}
+\ProvidesPackage{expl3}
   [%
     \ExplFileDate\space v\ExplFileVersion\space
-    \ExplFileDescription\space (loader)
+    L3 programming layer (loader)
   ]%
 %    \end{macrocode}
 %
@@ -1603,22 +1600,22 @@
 % no \LaTeXe{} mechanism so this is all pretty basic.
 %    \begin{macrocode}
 \begingroup\expandafter\expandafter\expandafter\endgroup
-\expandafter\ifx\csname ver@\ExplFileName -generic.tex\endcsname\relax
+\expandafter\ifx\csname ver@expl3-generic.tex\endcsname\relax
 \else
   \immediate\write-1
     {%
-      Package \ExplFileName\space Info: The package is already loaded.%
+      Package expl3 Info: The package is already loaded.%
     }%
   \expandafter\endinput
 \fi
 \immediate\write-1
   {%
-    Package: \ExplFileName\space
+    Package: expl3
     \ExplFileDate\space v\ExplFileVersion\space
-    \ExplFileDescription\space (loader)%
+    L3 programming layer (loader)%
   }%
-\expandafter\edef\csname ver@\ExplFileName -generic.tex\endcsname
-  {\ExplFileDate\space v\ExplFileVersion\space \ExplFileDescription}%
+\expandafter\edef\csname ver@expl3-generic.tex\endcsname
+  {\ExplFileDate\space v\ExplFileVersion\space L3 programming layer}%
 %    \end{macrocode}
 %
 % \begin{variable}[aux]{\l@expl@tidy@tl}
