--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -40,8 +40,6 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileName{xparse}
-\def\ExplFileDescription{L3 Experimental document command parser}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -782,8 +780,8 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{xparse}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental document command parser}
 %    \end{macrocode}
 %
 % \subsection{Variables and constants}
