--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -61,8 +61,6 @@ Do not distribute a modified version of this file.
 %</driver>
 %<*driver|pkg>
 \RequirePackage{expl3}
-\def\ExplFileName{l3auxdata}
-\def\ExplFileDescription{L3 Experimental auxiliary data}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|pkg>
@@ -673,8 +671,8 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %
 %    \begin{macrocode}
 %<*pkg>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3auxdata}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental auxiliary data}
 %</pkg>
 %    \end{macrocode}
 %
