--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -36,8 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{htoks}
-\def\ExplFileDescription{L3 Experimental conversion of tokens to text}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -174,8 +172,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3htoks}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental conversion of tokens to text}
 %</package>
 %    \end{macrocode}
 %
