--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -36,8 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3kernel-extras}
-\def\ExplFileDescription{L3 Experimental additions to l3kernel}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -626,8 +624,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3kernel-extras}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental additions to l3kernel}
 %</package>
 %    \end{macrocode}
 %
