--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -35,8 +35,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3str-format-new}
-\def\ExplFileDescription{L3 Experimental formatting as strings}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -300,8 +298,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3str-format-new}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental formatting as strings}
 \RequirePackage{l3str}
 %</package>
 %    \end{macrocode}
