--- a/l3trial/l3trace/l3trace.dtx
+++ b/l3trial/l3trace/l3trace.dtx
@@ -36,8 +36,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3trace}
-\def\ExplFileDescription{L3 Experimental tracing of higher-level modules}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -85,8 +83,8 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3trace}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental tracing of higher-level modules}
 %</package>
 %    \end{macrocode}
 %
