--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -54,23 +54,20 @@ Do not distribute a modified version of this file.
 % Need to protect the file metadata for any modules that load
 % \cls{l3doc}.  This is restored after \cs{ProvideExplClass} below.
 %    \begin{macrocode}
-%<class>\let        \filenameOld        \ExplFileName
 %<class>\let        \filedateOld        \ExplFileDate
 %<class>\let     \fileversionOld        \ExplFileVersion
-%<class>\let \filedescriptionOld        \ExplFileDescription
 %    \end{macrocode}
 %
 %<*driver|class>
 \RequirePackage{expl3,xparse,calc}
-\def\ExplFileName{l3doc}
-\def\ExplFileDescription{L3 Experimental documentation class}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|class>
 %
 %<*driver>
-\ProvidesFile{\ExplFileName.dtx}
-  [\ExplFileDate\space v\ExplFileVersion\space\ExplFileDescription]
+\ProvidesFile{l3doc.dtx}
+  [\ExplFileDate\space v\ExplFileVersion\space
+    L3 Experimental documentation class]
 \documentclass{l3doc}
 \usepackage{framed,lipsum}
 \begin{document}
@@ -81,12 +78,10 @@ Do not distribute a modified version of this file.
 % This isn't included in the typeset documentation because it's a bit
 % ugly:
 %<*class>
-\ProvidesExplClass
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
-\let        \ExplFileName        \filenameOld
+\ProvidesExplClass{l3doc}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental documentation class}
 \let        \ExplFileDate        \filedateOld
 \let        \ExplFileVersion     \fileversionOld
-\let        \ExplFileDescription \filedescriptionOld
 %</class>
 % \fi
 %
