--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -36,8 +36,6 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileName{l3keys2e}
-\def\ExplFileDescription{LaTeX2e option processing using LaTeX3 keys}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -137,8 +135,8 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3keys2e}{\ExplFileDate}{\ExplFileVersion}
+  {LaTeX2e option processing using LaTeX3 keys}
 %    \end{macrocode}
 %
 % Non-standard variants.
