--- a/l3trial/l3ldb/l3precom.dtx
+++ b/l3trial/l3ldb/l3precom.dtx
@@ -35,8 +35,6 @@
 %
 %<*driver|package>
 \RequirePackage{expl3}
-\def\ExplFileName{l3precom}
-\def\ExplFileDescription{L3 Experimental precompilation of functions}
 \def\ExplFileDate{2017/03/11}
 \def\ExplFileVersion{6988}
 %</driver|package>
@@ -92,8 +90,8 @@
 %    \begin{macrocode}
 %<*package>
 \RequirePackage{expl3}
-\ProvidesExplPackage
-  {\ExplFileName}{\ExplFileDate}{\ExplFileVersion}{\ExplFileDescription}
+\ProvidesExplPackage{l3precom}{\ExplFileDate}{\ExplFileVersion}
+  {L3 Experimental precompilation of functions}
 %    \end{macrocode}
 %
 %    \begin{macrocode}
