Make version optional in \ProvidesExpl...
A blank version should not add "v" to the data string.

--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1225,17 +1225,17 @@
 %    \begin{macrocode}
 \protected\def\ProvidesExplPackage#1#2#3#4%
   {%
-    \ProvidesPackage{#1}[#2 v#3 #4]%
+    \ProvidesPackage{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
     \ExplSyntaxOn
   }
 \protected\def\ProvidesExplClass#1#2#3#4%
   {%
-    \ProvidesClass{#1}[#2 v#3 #4]%
+    \ProvidesClass{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
     \ExplSyntaxOn
   }
 \protected\def\ProvidesExplFile#1#2#3#4%
   {%
-    \ProvidesFile{#1}[#2 v#3 #4]%
+    \ProvidesFile{#1}[#2 \ifx\relax#3\relax\else v#3\space\fi #4]%
     \ExplSyntaxOn
   }
 %    \end{macrocode}
