--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -172,7 +172,8 @@
 %   reverts to the document category code r\'{e}gime.
 % \end{function}
 %
-% \begin{function}{\ProvidesExplPackage, \ProvidesExplClass, \ProvidesExplFile}
+% \begin{function}[updated = 2017-03-19]
+%   {\ProvidesExplPackage, \ProvidesExplClass, \ProvidesExplFile}
 %   \begin{syntax}
 %     |\RequirePackage{expl3}| \\
 %     \cs{ProvidesExplPackage} \Arg{package} \Arg{date} \Arg{version} \Arg{description}
@@ -185,7 +186,9 @@
 %   end of the file, \cs{ExplSyntaxOff} will be called to reverse this.
 %   (This is the same concept as \LaTeXe{} provides in turning on
 %   \tn{makeatletter} within package and class code.) The \meta{date} should
-%   be given in the format \meta{year}/\meta{month}/\meta{day}.
+%   be given in the format \meta{year}/\meta{month}/\meta{day}. If the
+%   \meta{version} is given then it will be prefixed with \texttt{v} in
+%   the package identifier line.
 % \end{function}
 %
 % \begin{function}[updated = 2012-06-04]{\GetIdInfo}
