Better phrasing [ci skip]

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -206,7 +206,7 @@
 %
 % To summarize: Every single package using this syntax should identify
 % itself using one of the above methods. Special care is taken so that
-% every package or class file loaded with \tn{RequirePackage} or alike
+% every package or class file loaded with \tn{RequirePackage} or similar
 % are loaded with usual \LaTeXe{} category codes and the \LaTeX3 category code
 % scheme is reloaded when needed afterwards. See implementation for
 % details. If you use the \cs{GetIdInfo} command you can use the
