Drop use of SVN revision
The SVN revision is awkward as a version string as it can only
be known by carefully co-ordinating checkin to the master repo.
Moreover, it's easy to be 'out-by-one' and/or to find that
last-minute fixes require multiple commits.

Here, we assume that the date alone will be a suitable identifier
for releases. In particular, the development versions will at some
stage (soon) be marked up by l3build when installing locally, so
there should be no issue there.

--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -38,8 +37,6 @@
 %
 % \title{^^A
 %   The \textsf{l3str-format} package: formatting strings of characters^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -167,7 +164,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3str-format}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3str-format}{\ExplFileDate}{}
   {L3 Experimental string formatting}
 \RequirePackage{l3str}
 %</package>
