--- a/l3experimental/l3str/l3tl-analysis.dtx
+++ b/l3experimental/l3str/l3tl-analysis.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -37,8 +36,6 @@
 %
 % \title{^^A
 %   The \textsf{l3tl-analysis} package: analysing token lists^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -175,7 +172,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3tl-analysis}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3tl-analysis}{\ExplFileDate}{}
   {L3 Experimental token list analysis}
 %    \end{macrocode}
 %
