--- a/l3experimental/xcoffins/xcoffins.dtx
+++ b/l3experimental/xcoffins/xcoffins.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{xparse}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -45,8 +44,6 @@
 %
 % \title{^^A
 %   The \textsf{xcoffins} package\\ Design-level coffins^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -681,7 +678,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xcoffins}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xcoffins}{\ExplFileDate}{}
   {L3 Experimental design level coffins}
 %    \end{macrocode}
 %
