--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -22,7 +22,6 @@
 %
 %<*driver|generic|package>
 \def\ExplFileDate{2017/03/18}%
-\def\ExplFileVersion{7019}%
 %</driver|generic|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -39,8 +38,6 @@
 %
 % \title{^^A
 %   The \textsf{expl3} package and \LaTeX3 programming^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -1066,19 +1063,19 @@
 % A short piece of set up to check that the loader and \enquote{payload}
 % versions match.
 %
-% \begin{macro}{\ExplLoaderFileVersion}
-%   As DocStrip is used to generate \cs{ExplFileVersion}
+% \begin{macro}{\ExplLoaderFileDate}
+%   As DocStrip is used to generate \cs{ExplFileDate}
 %   for all files from the same source, it has to match. Thus the loaders
 %   simply save this information with a new name.
 %    \begin{macrocode}
 %<*loader>
-\let\ExplLoaderFileVersion\ExplFileVersion
+\let\ExplLoaderFileDate\ExplFileDate
 %</loader>
 %    \end{macrocode}
 % \end{macro}
 %
-% The interlock test itself is simple: \cs{ExplLoaderFileVersion} must be
-% defined and identical to \cs{ExplFileVersion}. As this has to work for
+% The interlock test itself is simple: \cs{ExplLoaderFileDate} must be
+% defined and identical to \cs{ExplFileDate}. As this has to work for
 % both \LaTeXe{} and other formats, there is some auto-detection involved.
 % (Done this way avoids having two very similar blocks for \LaTeXe{} and
 % other formats.)
@@ -1096,7 +1093,7 @@
           \errmessage{#1 Error: #2!}%
         }%
   \fi
-  \expandafter\ifx\csname ExplLoaderFileVersion\endcsname\relax
+  \expandafter\ifx\csname ExplLoaderFileDate\endcsname\relax
     \def\next
       {%
         \PackageError{expl3}{No expl3 loader detected}
@@ -1108,7 +1105,7 @@
         \endinput
       }
   \else
-    \ifx\ExplLoaderFileVersion\ExplFileVersion
+    \ifx\ExplLoaderFileDate\ExplFileDate
     \else
       \def\next
         {%
@@ -1134,7 +1131,7 @@
 \expandafter\ifx\csname ver@expl3-code.tex\endcsname\relax
   \expandafter\edef\csname ver@expl3-code.tex\endcsname
     {%
-      \ExplFileDate\space v\ExplFileVersion\space
+      \ExplFileDate\space
       L3 programming layer
     }%
 \else
@@ -1152,7 +1149,7 @@
 \immediate\write-1 %
   {%
     Package: expl3
-      \ExplFileDate\space v\ExplFileVersion\space
+      \ExplFileDate\space
       L3 programming layer (code)%
   }%
 %</!loader>
@@ -1168,7 +1165,7 @@
 %    \begin{macrocode}
 \ProvidesPackage{expl3}
   [%
-    \ExplFileDate\space v\ExplFileVersion\space
+    \ExplFileDate\space
     L3 programming layer (loader)
   ]%
 %    \end{macrocode}
@@ -1606,11 +1603,11 @@
 \immediate\write-1
   {%
     Package: expl3
-    \ExplFileDate\space v\ExplFileVersion\space
+    \ExplFileDate\space
     L3 programming layer (loader)%
   }%
 \expandafter\edef\csname ver@expl3-generic.tex\endcsname
-  {\ExplFileDate\space v\ExplFileVersion\space L3 programming layer}%
+  {\ExplFileDate\space L3 programming layer}%
 %    \end{macrocode}
 %
 % \begin{variable}[aux]{\l@expl@tidy@tl}
