--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -55,18 +55,16 @@ Do not distribute a modified version of this file.
 % \cls{l3doc}.  This is restored after \cs{ProvideExplClass} below.
 %    \begin{macrocode}
 %<class>\let        \filedateOld        \ExplFileDate
-%<class>\let     \fileversionOld        \ExplFileVersion
 %    \end{macrocode}
 %
 %<*driver|class>
 \RequirePackage{expl3,xparse,calc}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|class>
 %
 %<*driver>
 \ProvidesFile{l3doc.dtx}
-  [\ExplFileDate\space v\ExplFileVersion\space
+  [\ExplFileDate\space
     L3 Experimental documentation class]
 \documentclass{l3doc}
 \usepackage{framed,lipsum}
@@ -78,16 +76,13 @@ Do not distribute a modified version of this file.
 % This isn't included in the typeset documentation because it's a bit
 % ugly:
 %<*class>
-\ProvidesExplClass{l3doc}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplClass{l3doc}{\ExplFileDate}{}
   {L3 Experimental documentation class}
 \let        \ExplFileDate        \filedateOld
-\let        \ExplFileVersion     \fileversionOld
 %</class>
 % \fi
 %
-% \title{The \cls{l3doc} class\thanks{This file
-%         has version number v\ExplFileVersion, last
-%         revised \ExplFileDate.}}
+% \title{The \cls{l3doc} class}
 % \author{\Team}
 % \date{\ExplFileDate}
 % \maketitle
