--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -38,7 +38,6 @@
 %<package>  }
 %<package>\RequirePackage{xparse}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -53,8 +52,6 @@
 %
 % \title{^^A
 %   The \textsf{xfp} package\\Floating Point Unit^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -147,7 +144,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xfp}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xfp}{\ExplFileDate}{}
   {L3 Floating point unit}
 %    \end{macrocode}
 %
