--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -41,7 +41,6 @@
 %<package>    \endinput
 %<package>  }
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -58,8 +57,6 @@
 %
 % \title{^^A
 %   The \textsf{xparse} package\\ Document command parser^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -780,7 +777,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xparse}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xparse}{\ExplFileDate}{}
   {L3 Experimental document command parser}
 %    \end{macrocode}
 %
