--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -41,7 +41,6 @@
 %<package>    \endinput
 %<package>  }
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -54,8 +53,6 @@
 %
 % \title{^^A
 %   The \textsf{xtemplate} package\\ Prototype document functions^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -686,7 +683,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xtemplate}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xtemplate}{\ExplFileDate}{}
   {L3 Experimental prototype document functions}
 %    \end{macrocode}
 %
