--- a/l3trial/l3ldb/l3ldb.dtx
+++ b/l3trial/l3ldb/l3ldb.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -52,8 +51,6 @@
 %
 % \title{^^A
 %   The \pkg{l3ldb} package\\ LaTeX3 Resource Database^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -231,7 +228,7 @@
 %    \begin{macrocode}
 %<*package>
 \RequirePackage{expl3}
-\ProvidesExplPackage{l3ldb}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3ldb}{\ExplFileDate}{}
   {L3 Experimental resource database}
 %    \end{macrocode}
 %
