--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -36,7 +36,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \pkg{l3str-format-new} package\\ LaTeX3 String Formatting^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -298,7 +295,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3str-format-new}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3str-format-new}{\ExplFileDate}{}
   {L3 Experimental formatting as strings}
 \RequirePackage{l3str}
 %</package>
