--- a/l3experimental/l3str/l3str-convert.dtx
+++ b/l3experimental/l3str/l3str-convert.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -38,8 +37,6 @@
 %
 % \title{^^A
 %   The \textsf{l3str-convert} package: string encoding conversions^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -276,7 +273,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3str-convert}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3str-convert}{\ExplFileDate}{}
   {L3 Experimental string encoding conversions}
 \RequirePackage{l3tl-analysis,l3tl-build}
 %    \end{macrocode}
