--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -38,7 +38,6 @@
 %<package>    \endinput
 %<package>  }
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -50,8 +49,6 @@
 %
 % \title{^^A
 %   The \textsf{l3galley} package\\ Galley code^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -690,7 +687,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3galley}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3galley}{\ExplFileDate}{}
   {L3 Experimental galley code}
 %</package>
 %    \end{macrocode}
