--- a/l3experimental/xgalley/xgalley.dtx
+++ b/l3experimental/xgalley/xgalley.dtx
@@ -24,7 +24,6 @@
 %<*driver|package>
 \RequirePackage{xparse}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -36,8 +35,6 @@
 %
 % \title{^^A
 %   The \textsf{xgalley} package\\ Galley^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -736,7 +733,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xgalley}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xgalley}{\ExplFileDate}{}
   {L3 Experimental galley}
 \RequirePackage{xparse,xtemplate,l3galley}
 %    \end{macrocode}
