--- a/l3kernel/l3fp-logic.dtx
+++ b/l3kernel/l3fp-logic.dtx
@@ -23,17 +23,14 @@
 %<*driver>
 \documentclass[full]{l3doc}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
 %</driver>
 % \fi
 %
-% \title{The \textsf{l3fp-logic} package\thanks{This file
-%         has version number \ExplFileVersion, last
-%         revised \ExplFileDate.}\\
-% Floating point conditionals}
+% \title{The \textsf{l3fp-logic} package\\
+%   Floating point conditionals}
 % \author{^^A
 %  The \LaTeX3 Project\thanks
 %    {^^A
