--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -23,17 +23,14 @@
 %<*driver>
 \documentclass[full]{l3doc}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 \begin{document}
   \DocInput{\jobname.dtx}
 \end{document}
 %</driver>
 % \fi
 %
-% \title{The \textsf{l3fp-parse} package\thanks{This file
-%         has version number \fileversion, last
-%         revised \filedate.}\\
-% Floating point expression parsing}
+% \title{The \textsf{l3fp-parse} package
+%   Floating point expression parsing}
 % \author{^^A
 %  The \LaTeX3 Project\thanks
 %    {^^A
