--- a/l3kernel/l3syntax-changes.tex
+++ b/l3kernel/l3syntax-changes.tex
@@ -19,15 +19,9 @@ The released version of this bundle is available from CTAN.
 \documentclass{l3doc}
 
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 
 \title{%
-  Syntax changes in \LaTeX3 functions
-    \thanks
-      {%
-        This file describes v\ExplFileVersion,
-        last revised \ExplFileDate.
-      }%
+  Syntax changes in \LaTeX3 functions%
 }
 \author{%
   The \LaTeX3 Project\thanks
