--- a/l3packages/l3keys2e/l3keys2e.dtx
+++ b/l3packages/l3keys2e/l3keys2e.dtx
@@ -37,7 +37,6 @@
 %<package>    \endinput
 %<package>  }
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -51,8 +50,6 @@
 % \title{^^A
 %   The \textsf{l3keys2e} package\\
 %     \LaTeXe{} option processing using \LaTeX3 keys^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -135,7 +132,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{l3keys2e}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3keys2e}{\ExplFileDate}{}
   {LaTeX2e option processing using LaTeX3 keys}
 %    \end{macrocode}
 %
