--- a/l3packages/xfrac/xfrac.dtx
+++ b/l3packages/xfrac/xfrac.dtx
@@ -39,7 +39,6 @@
 %<package>  }
 \RequirePackage{amstext,graphicx,l3keys2e,textcomp,xparse,xtemplate}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -54,8 +53,6 @@
 %
 % \title{^^A
 %   The \textsf{xfrac} package\\ Split-level fractions^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -537,7 +534,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xfrac}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xfrac}{\ExplFileDate}{}
   {L3 Experimental split-level fractions}
 %    \end{macrocode}
 %
