--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \pkg{l3benchmark} package\\ Benchmark^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -119,7 +116,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3benchmark}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3benchmark}{\ExplFileDate}{}
   {L3 Experimental benchmarking}
 %</package>
 %    \end{macrocode}
