--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \pkg{l3bigint} package\\ Unbounded integers^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -609,7 +606,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3bigint}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3bigint}{\ExplFileDate}{}
   {L3 Experimental unbounded integer support}
 %</package>
 %    \end{macrocode}
