--- a/l3trial/l3check/l3check.dtx
+++ b/l3trial/l3check/l3check.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -50,8 +49,6 @@
 %
 % \title{^^A
 %   The \pkg{l3check} package\\ Checking and debugging \LaTeX3 code^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -234,7 +231,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3check}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3check}{\ExplFileDate}{}
   {L3 Experimental checking and debugging}
 %</package>
 %    \end{macrocode}
