--- a/l3trial/l3fp-extras/l3fp-extras.dtx
+++ b/l3trial/l3fp-extras/l3fp-extras.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -36,8 +35,6 @@
 %
 % \title{^^A
 %   The \pkg{l3fp-extras} package\\ Add ons to \pkg{l3fp}^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -152,7 +149,7 @@
 %
 %    \begin{macrocode}
 \ProvidesExplPackage{l3fp-extras}
-  {\ExplFileDate}{\ExplFileVersion}{L3 Experimental additions to l3fp}
+  {\ExplFileDate}{}{L3 Experimental additions to l3fp}
 %    \end{macrocode}
 %
 %    \begin{macrocode}
