--- a/l3trial/l3hooks/l3hooks.dtx
+++ b/l3trial/l3hooks/l3hooks.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \pkg{l3hooks} package\\ Hooks^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -175,7 +172,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3hooks}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3hooks}{\ExplFileDate}{}
   {L3 Experimental hooks}
 %</package>
 %    \end{macrocode}
