--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \pkg{l3htoks} package\\ Converting tokens to text^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -172,7 +169,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3htoks}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3htoks}{\ExplFileDate}{}
   {L3 Experimental conversion of tokens to text}
 %</package>
 %    \end{macrocode}
