--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -50,8 +49,6 @@
 %
 % \title{^^A
 %   The \pkg{l3kernel-extras} package\\ Add ons to \pkg{l3kernel}^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%      last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -624,7 +621,7 @@
 %
 %    \begin{macrocode}
 %<*package>
-\ProvidesExplPackage{l3kernel-extras}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3kernel-extras}{\ExplFileDate}{}
   {L3 Experimental additions to l3kernel}
 %</package>
 %    \end{macrocode}
