--- a/l3trial/l3ldb/l3precom.dtx
+++ b/l3trial/l3ldb/l3precom.dtx
@@ -36,7 +36,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \textsf{l3precom} package: precompiling functions^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -90,7 +87,7 @@
 %    \begin{macrocode}
 %<*package>
 \RequirePackage{expl3}
-\ProvidesExplPackage{l3precom}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{l3precom}{\ExplFileDate}{}
   {L3 Experimental precompilation of functions}
 %    \end{macrocode}
 %
