--- a/l3trial/xbox/xbox.dtx
+++ b/l3trial/xbox/xbox.dtx
@@ -37,7 +37,6 @@
 %<*driver|package>
 \RequirePackage{expl3,xparse}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -49,8 +48,6 @@
 %
 % \title{^^A
 %   The \textsf{xbox} package\\Document level boxes^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -442,7 +439,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplPackage{xbox}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplPackage{xbox}{\ExplFileDate}{}
   {L3 Experimental document level boxes}
 %    \end{macrocode}
 %
