--- a/l3trial/xfont/xfss-setup.dtx
+++ b/l3trial/xfont/xfss-setup.dtx
@@ -23,7 +23,6 @@
 %<*driver|package>
 \RequirePackage{expl3}
 \def\ExplFileDate{2017/03/18}
-\def\ExplFileVersion{7019}
 %</driver|package>
 %<*driver>
 \documentclass[full]{l3doc}
@@ -35,8 +34,6 @@
 %
 % \title{^^A
 %   The \textsf{xfss-setup} file\\ Experimental Font Selection Setup^^A
-%   \thanks{This file describes v\ExplFileVersion,
-%     last revised \ExplFileDate.}^^A
 % }
 %
 % \author{^^A
@@ -68,7 +65,7 @@
 %    \end{macrocode}
 %
 %    \begin{macrocode}
-\ProvidesExplFile{xfss-setup.cfg}{\ExplFileDate}{\ExplFileVersion}
+\ProvidesExplFile{xfss-setup.cfg}{\ExplFileDate}{}
   {L3 Experimental font selection setup}
 %    \end{macrocode}
 %
